# camera_desktop

./: .pubignore  CHANGELOG.md  README.md  pubspec.yaml
.github/workflows/: ci.yml
ci/: check_unicode_inventory.py  cp936_repro.cpp
example/: pubspec.yaml
example/integration_test/: image_stream_dispose_test.dart
example/lib/: main.dart
example/macos/: Podfile
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/RunnerTests/: RunnerTests.swift
example/windows/: CMakeLists.txt
ios/: camera_desktop.podspec
ios/camera_desktop/: Package.swift
lib/src/: camera_desktop_plugin.dart  image_stream_ffi.dart
linux/: camera.cc  device_enumerator.cc  device_enumerator.h  pipewire_portal.cc  record_handler.cc  record_handler.h
macos/: camera_desktop.podspec
macos/camera_desktop/Sources/camera_desktop/: CameraDesktopPlugin.swift  CameraSession.swift  DeviceEnumerator.swift  ImageStreamFFI.swift  ImageStreamHandleBridge.swift  PhotoHandler.swift  RecordHandler.swift
test/: camera_desktop_test.dart
windows/: CMakeLists.txt  camera.cpp  camera.h  camera_desktop_plugin.cpp  camera_desktop_plugin.h  camera_texture.cpp  camera_texture.h  logging.h
